fixed wrapping on buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,6 +159,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   gap: 5rem;
   margin: 10rem 3rem;
 }
@@ -191,6 +192,7 @@
 .menu-category-container {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   margin: 5rem auto;
   width: 80%;
   gap: 3rem;
